Fix java version to 1.8 (JDK 8)